debug: Add startup-debug.sh wrapper to trace ECS container startup
ECSでentrypoint.shが実行されない原因を特定するため、以下のデバッグ層を追加:

**実装内容**:
1. startup-debug.sh: ENTRYPOINTラッパー
   - コンテナ起動時刻、スクリプト名、引数、PID、PWD、USERを出力
   - entrypoint.shの存在確認後、exec経由で実行
   - すべての出力をstderr(CloudWatch)に送信

2. entrypoint.sh: --testオプション追加
   - ビルド時にentrypoint.sh実行可能性を検証
   - 起動引数とPPIDをログに追加

3. Dockerfile: 段階的検証
   - ビルド時に--testモードでentrypoint.sh検証
   - startup-debug.shを動的生成・内容確認
   - ENTRYPOINTをstartup-debug.shに変更

**期待される結果**:
- [STARTUP-DEBUG]ログが出力 → ENTRYPOINTは実行されている
  → entrypoint.sh自体に問題がある可能性
- [STARTUP-DEBUG]ログが出ない → ECSがENTRYPOINTをバイパス
  → Task Definition/ECS設定に問題がある可能性

Ref: 2FA本番デプロイ500エラー調査 (Revision 42)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -106,18 +106,40 @@ COPY docker/entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh \
     && echo "[Docker Build] entrypoint.sh copied and made executable" \
     && ls -la /usr/local/bin/entrypoint.sh \
-    && head -5 /usr/local/bin/entrypoint.sh
+    && head -5 /usr/local/bin/entrypoint.sh \
+    && echo "[Docker Build] Testing entrypoint.sh can execute..." \
+    && /usr/local/bin/entrypoint.sh --test || echo "[Docker Build] WARNING: entrypoint.sh test failed"
 
 # =============================================================================
-# 起動コマンド検証
+# デバッグ用スタートアップラッパー作成
 # =============================================================================
-# デバッグ: ENTRYPOINT/CMDが正しく設定されているか確認
-RUN echo "[Docker Build] Verifying ENTRYPOINT will be used..." \
-    && echo "[Docker Build] ENTRYPOINT: /usr/local/bin/entrypoint.sh" \
-    && echo "[Docker Build] CMD: apache2-foreground"
+# ECSがENTRYPOINTをバイパスしているか検証するため、複数の検証層を用意
+RUN echo "[Docker Build] Creating startup-debug.sh wrapper..." \
+    && echo '#!/bin/bash' > /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] ========================================" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] Container started at $(date)" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] Script: $0" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] Args: $@" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] PID: $$" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] PWD: $(pwd)" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] USER: $(whoami)" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] Testing entrypoint.sh existence..." >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'ls -la /usr/local/bin/entrypoint.sh >&2 || echo "[STARTUP-DEBUG] ERROR: entrypoint.sh not found!" >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'echo "[STARTUP-DEBUG] Executing entrypoint.sh..." >&2' >> /usr/local/bin/startup-debug.sh \
+    && echo 'exec /usr/local/bin/entrypoint.sh "$@"' >> /usr/local/bin/startup-debug.sh \
+    && chmod +x /usr/local/bin/startup-debug.sh \
+    && echo "[Docker Build] startup-debug.sh created:" \
+    && cat /usr/local/bin/startup-debug.sh
 
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+# =============================================================================
+# 起動コマンド設定
+# =============================================================================
+# デバッグラッパー経由でentrypoint.shを呼び出す
+# これにより、ECSが何を実行しているか（またはスキップしているか）が明確になる
+ENTRYPOINT ["/usr/local/bin/startup-debug.sh"]
 CMD ["apache2-foreground"]
 
 # デバッグ: イメージのメタデータを確認可能にする
-LABEL entrypoint.test="should_see_entrypoint_logs_in_cloudwatch"
+LABEL entrypoint.wrapper="startup-debug.sh" \
+      entrypoint.target="entrypoint.sh" \
+      debug.level="maximum"
