fix: Use new Task Definition ARN in update-service command
**Critical Bug**: ECS service was not using newly registered Task Definitions
- update-service called with --force-new-deployment only
- Missing --task-definition parameter
- Service continued using old revision instead of new one

**Result**: Revisions 39-44 were registered but never deployed
- Explains why entryPoint changes had no effect
- Service kept running Revision 36 with broken configuration

**Fix**: Pass Task Definition ARN from register step to update-service
- ${{ steps.task-def.outputs.task-definition-arn }}
- Add validation to ensure ARN exists
- Display which revision is being deployed

Ref: 2FA本番デプロイ500エラー調査 - ROOT CAUSE IDENTIFIED

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -175,11 +175,20 @@ jobs:
       #########################################################################
       - name: Update ECS service
         run: |
+          # 新しいTask Definitionを使用してサービスを更新
+          TASK_DEF_ARN="${{ steps.task-def.outputs.task-definition-arn }}"
+          if [ -z "$TASK_DEF_ARN" ]; then
+            echo "❌ ERROR: Task Definition ARN not found"
+            exit 1
+          fi
+          
+          echo "📋 Updating service with Task Definition: $TASK_DEF_ARN"
           aws ecs update-service \
             --cluster $ECS_CLUSTER \
             --service $ECS_SERVICE \
+            --task-definition "$TASK_DEF_ARN" \
             --force-new-deployment \
-            --query 'service.{ServiceName:serviceName,Status:status,DesiredCount:desiredCount}'
+            --query 'service.{ServiceName:serviceName,Status:status,DesiredCount:desiredCount,TaskDefinition:taskDefinition}'
           
           echo "✅ ECS service update initiated"
 
