--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -35,6 +35,16 @@ on:
         required: false
         type: boolean
         default: false
+      skip_tests:
+        description: 'Skip tests (for emergency deployments)'
+        required: false
+        type: boolean
+        default: false
+      skip_migrations:
+        description: 'Skip database migrations (use with caution)'
+        required: false
+        type: boolean
+        default: false
 
 env:
   AWS_REGION: ap-northeast-1
@@ -56,7 +66,49 @@ jobs:
         uses: actions/checkout@v4
 
       #########################################################################
-      # 2. AWS認証
+      # 2. テスト実行（オプション: 緊急時はスキップ可能）
+      #########################################################################
+      - name: Run Tests
+        if: ${{ !inputs.skip_tests }}
+        continue-on-error: false
+        run: |
+          echo "🧪 Running tests with SQLite in-memory database..."
+          
+          # Composerの依存関係インストール
+          composer install --no-interaction --prefer-dist --optimize-autoloader
+          
+          # テスト実行（phpunit.xmlでSQLite設定済み）
+          php artisan test --parallel || {
+            echo "❌ Tests failed. Deployment aborted."
+            exit 1
+          }
+          
+          echo "✅ All tests passed"
+
+      #########################################################################
+      # 3. アセットビルド検証
+      #########################################################################
+      - name: Verify Asset Build
+        run: |
+          echo "📦 Verifying asset build..."
+          
+          # package.jsonの存在確認
+          if [ ! -f "package.json" ]; then
+            echo "⚠️ package.json not found, skipping asset verification"
+            exit 0
+          fi
+          
+          # manifest.jsonの存在確認（Viteビルド成果物）
+          if [ ! -f "public/build/manifest.json" ]; then
+            echo "❌ Asset build manifest not found"
+            echo "ℹ️ Note: Assets should be built during Docker image creation"
+            exit 1
+          fi
+          
+          echo "✅ Asset build verified"
+
+      #########################################################################
+      # 4. AWS認証
       #########################################################################
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -66,14 +118,14 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       #########################################################################
-      # 3. ECRログイン
+      # 5. ECRログイン
       #########################################################################
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
       #########################################################################
-      # 4. Dockerイメージビルド & プッシュ
+      # 6. Dockerイメージビルド & プッシュ
       #########################################################################
       - name: Build and push Docker image
         if: ${{ !inputs.skip_build }}
@@ -97,7 +149,7 @@ jobs:
           echo "Pushed image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       #########################################################################
-      # 5. ECSタスク定義取得
+      # 7. ECSタスク定義取得
       #########################################################################
       - name: Download current task definition
         run: |
@@ -111,7 +163,7 @@ jobs:
             task-definition.json > task-definition-clean.json
 
       #########################################################################
-      # 6. 新しいイメージでタスク定義更新
+      # 8. 新しいイメージでタスク定義更新
       #########################################################################
       - name: Update task definition with new image
         if: ${{ !inputs.skip_build }}
@@ -156,7 +208,7 @@ jobs:
           jq '.containerDefinitions[0] | {name, image, entryPoint, command}' task-definition-new.json
 
       #########################################################################
-      # 7. ECSタスク定義登録
+      # 9. ECSタスク定義登録
       #########################################################################
       - name: Register new task definition
         if: ${{ !inputs.skip_build }}
@@ -171,9 +223,67 @@ jobs:
           echo "Registered task definition: $TASK_DEF_ARN"
 
       #########################################################################
-      # 8. ECSサービス更新（ローリングアップデート）
+      # 10. データベースマイグレーション実行
+      #########################################################################
+      - name: Run Database Migrations
+        if: ${{ !inputs.skip_migrations }}
+        run: |
+          echo "🗄️ Running database migrations..."
+          
+          # 実行中のタスクARNを取得
+          TASK_ARN=$(aws ecs list-tasks \
+            --cluster $ECS_CLUSTER \
+            --service-name $ECS_SERVICE \
+            --desired-status RUNNING \
+            --query 'taskArns[0]' \
+            --output text)
+          
+          if [ -z "$TASK_ARN" ] || [ "$TASK_ARN" = "None" ]; then
+            echo "❌ No running tasks found in service $ECS_SERVICE"
+            exit 1
+          fi
+          
+          # タスクIDを抽出（ARNからIDのみ取得）
+          TASK_ID=$(echo $TASK_ARN | awk -F/ '{print $NF}')
+          echo "📋 Using task: $TASK_ID"
+          
+          # 1. データベース接続テスト（タイムアウト15秒）
+          echo "🔍 Testing database connection..."
+          timeout 15 aws ecs execute-command \
+            --cluster $ECS_CLUSTER \
+            --task $TASK_ID \
+            --container app \
+            --interactive \
+            --command "/bin/bash -c 'php artisan db:show --database=pgsql'" > /dev/null 2>&1 || {
+            echo "❌ Database connection test failed (timeout or connection error)"
+            echo "ℹ️ Possible causes:"
+            echo "   - Security Group rules not configured"
+            echo "   - RDS instance not accessible from ECS"
+            echo "   - DB credentials incorrect"
+            exit 1
+          }
+          echo "✅ Database connection successful"
+          
+          # 2. マイグレーション実行
+          echo "🚀 Executing migrations..."
+          aws ecs execute-command \
+            --cluster $ECS_CLUSTER \
+            --task $TASK_ID \
+            --container app \
+            --interactive \
+            --command "/bin/bash -c 'cd /var/www/html && php artisan migrate --force --isolated'" || {
+            echo "❌ Migration failed"
+            echo "⚠️ Deployment will be aborted"
+            exit 1
+          }
+          
+          echo "✅ Migrations completed successfully"
+
+      #########################################################################
+      # 11. ECSサービス更新（ローリングアップデート）
       #########################################################################
       - name: Update ECS service
+        id: service-update
         run: |
           # 新しいTask Definitionを使用してサービスを更新
           TASK_DEF_ARN="${{ steps.task-def.outputs.task-definition-arn }}"
@@ -181,6 +291,15 @@ jobs:
             echo "❌ ERROR: Task Definition ARN not found"
             exit 1
           fi
+          
+          # 現在のTask Definitionを保存（ロールバック用）
+          CURRENT_TASK_DEF=$(aws ecs describe-services \
+            --cluster $ECS_CLUSTER \
+            --services $ECS_SERVICE \
+            --query 'services[0].taskDefinition' \
+            --output text)
+          echo "previous-task-definition=$CURRENT_TASK_DEF" >> $GITHUB_OUTPUT
+          echo "📋 Current Task Definition: $CURRENT_TASK_DEF"
           
           echo "📋 Updating service with Task Definition: $TASK_DEF_ARN"
           aws ecs update-service \
@@ -193,19 +312,56 @@ jobs:
           echo "✅ ECS service update initiated"
 
       #########################################################################
-      # 9. デプロイ完了待機
+      # 12. デプロイ完了待機
       #########################################################################
       - name: Wait for deployment to complete
+        id: wait-deployment
         run: |
           echo "⏳ Waiting for deployment to complete..."
+          
+          # 最大15分待機（デフォルト: 10分）
           aws ecs wait services-stable \
             --cluster $ECS_CLUSTER \
-            --services $ECS_SERVICE
+            --services $ECS_SERVICE \
+            --waiter-max-attempts 90 \
+            --waiter-delay 10 || {
+            echo "❌ Deployment failed or timed out"
+            exit 1
+          }
           
           echo "✅ Deployment completed successfully"
 
       #########################################################################
-      # 10. デプロイ成功通知
+      # 13. アプリケーションヘルスチェック
+      #########################################################################
+      - name: Application Health Check
+        run: |
+          echo "🏥 Performing application health check..."
+          
+          # Target Group ヘルスチェック
+          TARGET_GROUP_ARN="arn:aws:elasticloadbalancing:ap-northeast-1:469751479977:targetgroup/myteacher-production-tg/b21e68db3fa99163"
+          
+          HEALTHY_COUNT=$(aws elbv2 describe-target-health \
+            --target-group-arn $TARGET_GROUP_ARN \
+            --query 'TargetHealthDescriptions[?TargetHealth.State==`healthy`] | length(@)' \
+            --output text)
+          
+          TOTAL_COUNT=$(aws elbv2 describe-target-health \
+            --target-group-arn $TARGET_GROUP_ARN \
+            --query 'length(TargetHealthDescriptions)' \
+            --output text)
+          
+          echo "📊 Health Status: $HEALTHY_COUNT/$TOTAL_COUNT targets healthy"
+          
+          if [ "$HEALTHY_COUNT" -eq "0" ]; then
+            echo "❌ No healthy targets found"
+            exit 1
+          fi
+          
+          echo "✅ Application health check passed"
+
+      #########################################################################
+      # 14. デプロイ成功通知
       #########################################################################
       - name: Deployment success notification
         if: success()
@@ -214,3 +370,35 @@ jobs:
           echo "Cluster: $ECS_CLUSTER"
           echo "Service: $ECS_SERVICE"
           echo "Commit: ${{ github.sha }}"
+          echo "Task Definition: ${{ steps.task-def.outputs.task-definition-arn }}"
+
+      #########################################################################
+      # 15. ロールバック（失敗時）
+      #########################################################################
+      - name: Rollback on Failure
+        if: failure() && steps.service-update.outputs.previous-task-definition != ''
+        run: |
+          echo "⚠️ Deployment failed. Rolling back to previous version..."
+          
+          PREVIOUS_TASK_DEF="${{ steps.service-update.outputs.previous-task-definition }}"
+          echo "📋 Rolling back to: $PREVIOUS_TASK_DEF"
+          
+          # 前回のTask Definitionに戻す
+          aws ecs update-service \
+            --cluster $ECS_CLUSTER \
+            --service $ECS_SERVICE \
+            --task-definition "$PREVIOUS_TASK_DEF" \
+            --force-new-deployment || {
+            echo "❌ Rollback failed"
+            exit 1
+          }
+          
+          echo "⏳ Waiting for rollback to complete..."
+          aws ecs wait services-stable \
+            --cluster $ECS_CLUSTER \
+            --services $ECS_SERVICE \
+            --waiter-max-attempts 60 \
+            --waiter-delay 10
+          
+          echo "✅ Rollback completed successfully"
+          echo "⚠️ Please investigate the deployment failure and fix issues before retrying"
