--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -80,15 +80,15 @@ jobs:
           # .envファイル作成（テスト用）
           cp .env.example .env
           
+          # キャッシュドライバーをarrayに設定（ファイルシステム不要）
+          sed -i 's/^CACHE_STORE=.*/CACHE_STORE=array/' .env
+          sed -i 's/^SESSION_DRIVER=.*/SESSION_DRIVER=array/' .env
+          sed -i 's/^QUEUE_CONNECTION=.*/QUEUE_CONNECTION=sync/' .env
+          
           # APP_KEYを生成（テスト用）
           php artisan key:generate --ansi
           
-          # ビューキャッシュとアプリケーションキャッシュをクリア
-          php artisan view:clear
-          php artisan cache:clear
-          php artisan config:clear
-          
-          # テスト実行（phpunit.xmlでSQLite設定済み）
+          # テスト実行（phpunit.xmlでSQLite設定済み、キャッシュクリア不要）
           php artisan test --parallel || {
             echo "❌ Tests failed. Deployment aborted."
             exit 1
